tests/baselines/reference/jsFileCompilationExportAssignmentSyntax.errors.txt
tests/cases/compiler/a.js(1,1): error TS8003: 'export=' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    export = b;
    ~~~~~~~~~~~
!!! error TS8003: 'export=' can only be used in a .ts file.